Logs improved, extended funding calculation fixes